--- a/src/DentalClinic/Doctor/ListView.fxml
+++ b/src/DentalClinic/Doctor/ListView.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="480.0" prefWidth="720.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DentalClinic.Patient.ListController">
+<AnchorPane prefHeight="480.0" prefWidth="720.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DentalClinic.Doctor.ListController">
     <children>
         <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <top>
@@ -27,7 +27,7 @@
                                 <Image url="@../assets/clipboard.png" />
                             </image>
                         </ImageView>
-                        <Label text="List of Patient" textFill="WHITE">
+                        <Label text="List of Doctors" textFill="WHITE">
                             <font>
                                 <Font name="System Bold" size="24.0" />
                             </font>
@@ -37,37 +37,37 @@
             </top>
             <center>
                 <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-               <children>
-                  <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <children>
-                        <TilePane hgap="10.0" vgap="10.0">
-                           <children>
-                              <VBox>
-                                 <children>
-                                    <Label text="PARAMETER" />
-                                    <ChoiceBox prefWidth="150.0" />
-                                 </children>
-                              </VBox>
-                              <VBox>
-                                 <children>
-                                    <Label text="CRITERIA" />
-                                    <TextField />
-                                 </children>
-                              </VBox>
-                           </children>
-                        </TilePane>
-                        <TableView VBox.vgrow="ALWAYS">
-                          <columns>
-                            <TableColumn prefWidth="75.0" text="C1" />
-                            <TableColumn prefWidth="75.0" text="C2" />
-                          </columns>
-                        </TableView>
-                     </children>
-                     <padding>
-                        <Insets left="10.0" right="10.0" />
-                     </padding>
-                  </VBox>
-               </children>
+                    <children>
+                        <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                            <children>
+                                <TilePane hgap="10.0" vgap="10.0">
+                                    <children>
+                                        <VBox>
+                                            <children>
+                                                <Label text="PARAMETER" />
+                                                <ChoiceBox prefWidth="150.0" />
+                                            </children>
+                                        </VBox>
+                                        <VBox>
+                                            <children>
+                                                <Label text="CRITERIA" />
+                                                <TextField />
+                                            </children>
+                                        </VBox>
+                                    </children>
+                                </TilePane>
+                                <TableView VBox.vgrow="ALWAYS">
+                                    <columns>
+                                        <TableColumn prefWidth="75.0" text="C1" />
+                                        <TableColumn prefWidth="75.0" text="C2" />
+                                    </columns>
+                                </TableView>
+                            </children>
+                            <padding>
+                                <Insets left="10.0" right="10.0" />
+                            </padding>
+                        </VBox>
+                    </children>
                 </AnchorPane>
             </center>
             <bottom>
@@ -75,7 +75,7 @@
                     <children>
                         <HBox prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                             <children>
-                        <Label text="0 Record Found." />
+                                <Label text="0 Record Found." />
                                 <TilePane alignment="CENTER_RIGHT" hgap="10.0" prefWidth="200.0" vgap="5.0" HBox.hgrow="ALWAYS">
                                     <children>
                                         <Button mnemonicParsing="false" text="REFRESH">
