--- a/src/DentalClinic/Pharmacy/productInformation/ProductInfoView.fxml
+++ b/src/DentalClinic/Pharmacy/productInformation/ProductInfoView.fxml
@@ -19,7 +19,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="567.0" prefWidth="911.0" style="-fx-background-color: #f2f2f2;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DentalClinic.Pharmacy.productInformation.ProductInfoController">
    <children>
       <BorderPane prefHeight="83.0" prefWidth="663.0" AnchorPane.bottomAnchor="360.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -83,7 +82,7 @@
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
                               <Label text="Category" AnchorPane.leftAnchor="0.0" />
-                              <Label text="ADD CATEGORY" AnchorPane.rightAnchor="0.0" />
+                              <Label onMouseClicked="#showCategory" text="ADD CATEGORY" AnchorPane.rightAnchor="0.0" />
                            </children>
                         </AnchorPane>
                         <ComboBox prefHeight="26.0" prefWidth="442.0" />
