--- a/src/DentalClinic/Doctor/InfoView.fxml
+++ b/src/DentalClinic/Doctor/InfoView.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="320.0" prefWidth="480.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="320.0" prefWidth="480.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DentalClinic.Doctor.InfoController">
     <children>
         <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <top>
@@ -54,10 +54,10 @@
                                 <VBox prefHeight="200.0" prefWidth="100.0">
                                     <children>
                                         <Label text="Doctor ID">
-                                 <font>
-                                    <Font name="System Bold" size="12.0" />
-                                 </font></Label>
-                                        <TextField fx:id="idField" editable="false" />
+                                            <font>
+                                                <Font name="System Bold" size="12.0" />
+                                            </font></Label>
+                                        <TextField fx:id="idField" />
                                     </children>
                                 </VBox>
                                 <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
@@ -69,7 +69,7 @@
                                 <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2">
                                     <children>
                                         <Label text="Speciality" />
-                              <TextField fx:id="specialityField" />
+                                        <TextField fx:id="specialityField" />
                                     </children>
                                 </VBox>
                                 <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="3">
@@ -112,7 +112,7 @@
                             <children>
                                 <TilePane alignment="CENTER" hgap="10.0" prefWidth="200.0" vgap="5.0" HBox.hgrow="ALWAYS">
                                     <children>
-                                        <Button mnemonicParsing="false" text="SAVE">
+                                        <Button mnemonicParsing="false" onMouseClicked="#saveDoctor" text="SAVE">
                                             <graphic>
                                                 <ImageView fitHeight="12.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true">
                                                     <image>
