--- a/src/DentalClinic/Doctor/InfoView.fxml
+++ b/src/DentalClinic/Doctor/InfoView.fxml
@@ -121,7 +121,7 @@
                                                 </ImageView>
                                             </graphic>
                                         </Button>
-                                        <Button mnemonicParsing="false" text="RESET">
+                                        <Button mnemonicParsing="false" onMouseClicked="#reset" text="RESET">
                                             <graphic>
                                                 <ImageView fitHeight="12.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true">
                                                     <image>
@@ -130,7 +130,7 @@
                                                 </ImageView>
                                             </graphic>
                                         </Button>
-                                        <Button mnemonicParsing="false" text="CLOSE">
+                                        <Button fx:id="closeButton" mnemonicParsing="false" onAction="#closeButtonAction" text="CLOSE">
                                             <graphic>
                                                 <ImageView fitHeight="12.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true">
                                                     <image>
