List+Save+Update fully functioning

--- a/src/DentalClinic/Administration/UserInformation/UserInformationView.fxml
+++ b/src/DentalClinic/Administration/UserInformation/UserInformationView.fxml
@@ -88,7 +88,7 @@
                         <VBox fillWidth="false" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="3">
                            <children>
                               <Label text="Password" />
-                              <TextField fx:id="txtPassword" prefWidth="210.0" />
+                              <TextField fx:id="txtPassword" editable="false" prefWidth="210.0" />
                            </children>
                            <GridPane.margin>
                               <Insets left="10.0" />
@@ -97,7 +97,7 @@
                         <VBox fillWidth="false" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="4">
                            <children>
                               <Label text="Re Password" />
-                              <TextField fx:id="txtRePassword" prefWidth="210.0" />
+                              <TextField fx:id="txtRePassword" editable="false" prefWidth="210.0" />
                            </children>
                            <GridPane.margin>
                               <Insets left="10.0" />
